[package]
name = "snpm"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tar = "0.4"
flate2 = "1.0"
url = "2.5"
semver = "1.0"
num_cpus = "1.16.0"
